add support for arithmetic expressions and refactor parsers.